<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2CA01616"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="133dp"
        android:layout_height="42dp"
        android:background="@drawable/buttonbackground"
        android:backgroundTint="@color/Coloe"
        android:contentDescription="@string/resetbutton"
        android:focusableInTouchMode="false"
        android:text="@string/Reset"
        android:textColor="#0E0C0D"
        android:foreground="?attr/selectableItemBackground"
        android:drawableRight="@drawable/ic_settings_backup_restore_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/button2"
        android:layout_width="133dp"
        android:layout_height="42dp"
        android:alpha="1"
        android:background="@drawable/buttonbackground"
        android:backgroundTint="@color/Coloer"
        android:focusableInTouchMode="false"
        android:text="@string/Button"
        android:textColor="#F7EDEDF0"
        android:foreground="?attr/selectableItemBackground"
        android:drawableRight="@drawable/ic_notifications_active_black_24dp"
        android:drawablePadding="-40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.07999998" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/TextView1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="377dp"
        android:layout_height="93dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="#66861FEE"
        android:gravity="center"
        android:text="@string/TextView"
        android:textColor="#E1181212"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="337dp"
        android:layout_height="79dp"
        android:gravity="left"
        android:text="@string/TextView1"
        android:textColor="#94B45E5E"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.04" />

</androidx.constraintlayout.widget.ConstraintLayout>